# gravity-game

./: CHANGELOG.md  pyproject.toml  requirements.txt
gravity/: __init__.py  automaton.py  backend.py  floatrect.py  frontend.py  game.py  input_handler.py  language.py  menu.py  physics.py  scene.py  settings.py  transform.py  utils.py  viewer.py  viewport_handler.py
gravity/tests/: test_floatrect.py  test_language.py  test_utils.py
