[project]
name = "gravity-game"
version = "0.0.1"
description = "A simple gravity game based on Newtonian physics"
authors = [{ name = "Robin Neville", email = "robin.m.neville@gmail.com" }]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --cov --cov-fail-under=100 --cov-report term-missing:skip-covered"
testpaths = ["tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_files = [
    "pyproject.toml:version",
    "gravity/__init__.py:__version__",
]
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = false
